<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/menuiteml1"
            android:title="@string/finish_V"
            android:orderInCategory="100"/>

    <item
            android:id="@+id/menuiteml2"
            android:title="@string/reload"
            android:orderInCategory="200"/>

    <item
            android:id="@+id/menuiteml3"
            android:title="@string/show_all"
            android:orderInCategory="300"/>

    <item
            android:id="@+id/menuiteml4"
            android:title="@string/media_only"
            android:orderInCategory="400"/>

    <item
            android:id="@+id/menuiteml5"
            android:title="@string/no_retweet"
            android:orderInCategory="500"/>

    <item
            android:id="@+id/menuiteml6"
            android:title="@string/noret_media"
            android:orderInCategory="500"/>


</menu>